--- a/kitkatemoji/build.gradle
+++ b/kitkatemoji/build.gradle
@@ -1,5 +1,4 @@
-apply plugin: 'com.huawei.ohos.hap'
-apply plugin: 'com.huawei.ohos.decctest'
+apply plugin: 'com.huawei.ohos.library'
 //For instructions on signature configuration, see https://developer.harmonyos.com/en/docs/documentation/doc-guides/ide_debug_device-0000001053822404#EN-US_TOPIC_0000001154985555__section1112183053510
 ohos {
     compileSdkVersion 5
@@ -18,11 +17,6 @@ ohos {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar', '*.har'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.13'
-    ohosTestImplementation 'com.huawei.ohos.testkit:runner:1.0.0.100'
-    implementation project(":kitkatemoji")
-}
-decc {
-    supportType = ['html','xml']
 }
